# Telegram2Elastic

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.sample.yml  pyproject.toml  requirements-dev.txt  requirements.txt  telegram2elastic.py  test_telegram2elastic.py
.github/workflows/: build-docker-image.yml  build-release.yml  rebuild-docker-image.yml  test.yml
output/: elastic.py  elasticsearch.py  file.py  redis.py  tcp.py
